[project]
name = "llm_agents"
version = "0.0.0"
authors = [{ name = "Cristian" }]
description = "Project Template"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools>=75.6.0",
    "llmx>=0.0.21a",
    "pydantic>=2.10.3",
    "uvicorn>=0.32.1", 
    "typer>=0.15.1",
    "fastapi>=0.115.6", 
    "python-multipart>=0.0.19", 
    "scipy>=1.13.1",
    "types-PyYAML>=6.0.12.20240917",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "matplotlib>=3.9.3",
    "altair", 
    "seaborn",
    "plotly", 
    "plotnine",
    "statsmodels", 
    "geopandas",
    "matplotlib-venn",
    "wordcloud",
    "openpyxl",
    "ydata-profiling",
    "pyarrow",
    "networkx",
    "pyvis",
    "SQLAlchemy",
    "pymssql",
    "pyodbc",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "langchain-experimental>=0.3.3",
    "langchain_google_community>=2.0.3",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "streamlit>=1.37.1",
    "python-magic>=0.4.27",
    "unstructured>=0.14.8",
    "sqlparse>=0.5.2",
    "langfuse>=2.56.0",
]

[dependency-groups]

# Dependencies used to build package
build = ["twine", "build"]

dev = [
    "mypy>=1.13.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist[psutil]",
    "ruff>=0.8.2",
    "types-requests>=2.32.0.20241016",
    "transformers",
    "huggingface_hub[cli]",
    "torch",
    "torchvision",
    "torchaudio"
]

### INDEXES

[tool.uv.sources]
torch = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }
torchvision = { index = "pytorch-gpu", marker = "platform_system == 'Windows'" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "default_pypy"
url = "https://pypi.org/simple/"
default = true

### BUILD

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["notebooks"]
